# wickr-crypto-c

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Cargo.toml  CryptoConfig.h.in  Doxyfile  LICENSE  README.android  README.ios  README.linux  README.md  README.osx  README.win32  Toolchain-Android.cmake  Toolchain-MacOS.cmake  Toolchain-iOS.cmake  WickrCryptoC.podspec  WickrCryptoCFips.podspec  appveyor.yml  build-ios-fat.sh  build_android_docker.sh  build_android_fat.sh  build_node_dist.sh  build_osx_universal.sh  build_php_docker.sh  create-android.sh  create-osx.sh  create-unix.sh  create-win32.sh  deploy_cocoapods.sh  install-android.sh  install-osx.sh  install-unix.sh  install-win32.sh  makefile.android  makefile.ios  makefile.linux  makefile.osx  makefile.win32  (+7 more)
.github/workflows/: android.yml  (+7 more)
CMakeModules/: AndroidFindJNI.cmake  FindNode.cmake  FindPHP.cmake
src/: CMakeLists.txt
src/crypto/: CMakeLists.txt  array.c  array.h  buffer.c  buffer.h  buffer_priv.c  cipher.h  cipher_priv.c  cipher_priv.h  crypto_engine.c  crypto_engine.h  devinfo.c  devinfo.h  digest.c  digest.h  ecdh.c  ecdh.h  ecdsa.c  ecdsa.h  ecdsa_priv.c  eckey.h  eckey_priv.c  ed448_suite.c  ed448_suite.h  ephemeral_keypair.c  ephemeral_keypair.h  ephemeral_keypair.pb-c.c  ephemeral_keypair.pb-c.h  ephemeral_keypair_priv.c  ephemeral_keypair_priv.h  identity.c  identity.h  identity.pb-c.c  identity.pb-c.h  identity_priv.c  kdf.c  kdf.h  memory.c  memory.h  message.pb-c.c  (+46 more)
src/crypto/proto/: compile_proto.sh  ephemeral_keypair.proto  message.proto  node.proto  storage.proto  stream.proto
src/ed448_test/: CMakeLists.txt  test_main.c
src/test/: CMakeLists.txt  externs.c  externs.h  main.c  test_array.c  test_context.c  test_ed448_suite.c  test_ed448_suite.h  test_ephemeral_keypair.c  test_ephemeral_keypair.h  test_identity.h  test_kdf.c  test_kdf.h  test_node.c  test_openssl_file_suite.c  test_openssl_file_suite.h  test_openssl_suite.c  test_protocol.c  test_stream_cipher.c  test_stream_info.c  test_stream_info.h  test_transport.c  test_transport.h  test_util.c
src/test/cspec/: Makefile.am  cspec_array.c  cspec_config.c  cspec_output.c  cspec_output_header.c  cspec_output_junit_xml.c  cspec_output_unit.c  cspec_output_verbose.c  cspec_output_xml.c  cspec_private.c  cspec_runner.c
src/test/cspec/inc/: Makefile.am  Makefile.in  cspec.h  cspec_array.h  cspec_config.h  cspec_output.h  cspec_output_header.h  cspec_output_junit_xml.h  cspec_output_unit.h  cspec_output_verbose.h  cspec_output_xml.h  cspec_private.h  cspec_private_output_junit_xml.h
src/wickrcrypto/: CMakeLists.txt
src/wickrcrypto/include/wickrcrypto/: array.h  b32.h  buffer.h  cipher.h  crypto_engine.h  devinfo.h  digest.h  ec_kyber_hybrid.h  ecdh.h  ecdh_cipher_ctx.h  ecdsa.h  eckey.h  encoder_result.h  ephemeral_keypair.h  fingerprint.h  identity.h  kdf.h  key_exchange.h  kyber_engine.h  kyber_key.h  memory.h  node.h  openssl_file_suite.h  openssl_suite.h  packet_meta.h  payload.h  pq_engine_ext.h  protocol.h  root_keys.h  shared_secret.h  storage.h  stream_ctx.h  stream_iv.h  stream_key.h  transport_ctx.h  transport_error.h  transport_handshake.h  transport_packet.h  transport_root_key.h  util.h  (+2 more)
src/wickrcrypto/include/wickrcrypto/private/: buffer_priv.h  cipher_priv.h  ecdsa_priv.h  eckey_priv.h  ephemeral_keypair_priv.h  identity_priv.h  node_priv.h  openssl_threads.h  pq_crystals_kyber.h  storage_priv.h  stream_key_priv.h  transport_handshake_priv.h  transport_priv.h  transport_root_key_priv.h
src/wickrcrypto/src/: array.c  b32.c  buffer.c  buffer_priv.c  cipher.c  cipher_priv.c  crypto_engine.c  ec_kyber_hybrid.c  ecdh.c  ecdh_cipher_ctx.c  ecdsa_priv.c  eckey.c  eckey_priv.c  encoder_result.c  ephemeral_keypair.c  ephemeral_keypair_priv.c  fingerprint.c  identity.c  identity_priv.c  kdf.c  key_exchange.c  kyber_engine.c  kyber_key.c  memory.c  node.c  node_priv.c  openssl_file_suite.c  openssl_suite.c  openssl_threads.c  packet_meta.c  payload.c  pq_crystals_kyber.c  pq_engine_ext.c  protocol.c  root_keys.c  shared_secret.c  storage.c  storage_priv.c  stream_ctx.c  stream_key.c  (+10 more)
src/wickrcrypto/swig/: CMakeLists.txt  buffer.i  buffer_java.i  buffer_js.i  buffer_php.i  buffer_ruby.i  cipher.i  dev_info.i  digest.i  ecdh_cipher.i  ecdsa.i  eckey.i  engine.i  fingerprint.i  identity.i  interface.i  kdf.i  key_exchange.i  keypairs.i  message_encoder.i  node.i  packet_meta.i  payload.i  root_keys.i  storage_keys.i  transport.i  transport_callbacks.i  transport_callbacks_js.i  wickr_array.i  wickr_ctx.i
src/wickrcrypto/swig/java/: AndroidManifest.xml  CMakeLists.txt  build.gradle  settings.gradle
src/wickrcrypto/swig/java/com/wickr/crypto/tests/: ContextTests.java  CryptoTests.java  DevInfoTests.java  ECDHCipherTests.java  FingerprintTests.java  IdentityTests.java  KeyStoreTests.java  NodeTests.java  PayloadTests.java  WickrRunner.java
src/wickrcrypto/swig/java/gradle/wrapper/: gradle-wrapper.properties
src/wickrcrypto/swig/node/: CMakeLists.txt
src/wickrcrypto/swig/node/test/: contextTests.js  cryptoEngineTests.js  deviceInfoTests.js  ecdhCipherTests.js  fingerprintTests.js  identityTests.js  nodeTests.js  payloadTests.js  rootKeyTests.js  storageKeyTests.js  transportTests.js
src/wickrcrypto/swig/php/: CMakeLists.txt
src/wickrcrypto/swig/php/test/: EngineTest.php
test/: CMakeLists.txt  externs.c  main.c  test_array.c  test_array.h  test_b32.c  test_b32.h  test_buffer.c  test_buffer.h  test_cipher.c  test_cipher.h  test_context.c  test_context.h  test_ec_key.c  test_ec_key.h  test_ec_kyber_hybrid.c  test_ec_kyber_hybrid.h  test_ecdh_cipher.c  test_ecdh_cipher.h  test_encoder_result.c  test_encoder_result.h  test_ephemeral_keypair.c  test_fingerprint.c  test_fingerprint.h  test_identity.c  test_kdf.c  test_key_exchange.c  test_key_exchange.h  test_kyber_key.c  test_kyber_key.h  test_node.c  test_node.h  test_openssl_file_suite.c  test_openssl_suite.c  test_openssl_suite.h  test_packet_meta.c  test_packet_meta.h  test_payload.c  test_payload.h  test_protocol.c  (+18 more)
wickr-crypto-sys/: Cargo.toml  build.rs
(+407 files in other folders)
