lib_LTLIBRARIES	= libcspec.la
libcspec_la_LDFLAGS=-version-info 0:0:0
libcspec_la_CPPFLAGS = -I$(top_srcdir)/inc
libcspec_la_SOURCES	=	\
	cspec_output_header.c \
	cspec_output_verbose.c \
	cspec_output_xml.c \
	cspec_runner.c \
	cspec_config.c \
	cspec_output_unit.c \
	cspec_private.c \
	cspec_output.c \
	array.c \
	cspec_output_junit_xml.c
