include_HEADERS = array.h \
				  cspec_config.h \
				  cspec.h \
				  cspec_output.h \
				  cspec_output_header.h \
				  cspec_output_junit_xml.h \
				  cspec_output_unit.h \
				  cspec_output_verbose.h \
				  cspec_output_xml.h \
				  cspec_private.h \
				  cspec_private_output_junit_xml.h
